[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24.1"
strum_macros = "0.24.3"
itertools = "0.10.5"
tinyset = "0.4.15"
tinyvec = { version = "1.6.0", features = ["rustc_1_57"] }
dendron = "0.1.4"
array2d = "0.3.0"